# maimaibot

./: .gitignore  Cargo.toml  README.md  musicDB.json  pyproject.toml  soundfx.txt  voice-partner.md  voice-system.md
libs/common-utils/: Cargo.toml
libs/common-utils/src/: lib.rs
libs/shared-client/src/: lib.rs
libs/userdb/: Cargo.toml
libs/userdb/src/: lib.rs
migrate-db/: Cargo.toml
migrate-db/src/: main.rs
plot_cache/: .gitignore
plugins/bind_user/: Cargo.toml
plugins/bind_user/src/: lib.rs
plugins/help-commands/: Cargo.toml
plugins/help-commands/src/: lib.rs
plugins/import-records/: Cargo.toml
plugins/import-records/src/: lib.rs  model.rs
plugins/pcrt-plot/: Cargo.toml
plugins/pcrt-plot/src/: lib.rs  plot.rs
plugins/phigros-tips/: Cargo.toml
plugins/phigros-tips/src/: lib.rs  tips.rs
plugins/ping/: Cargo.toml
plugins/ping/src/: lib.rs
plugins/play-voice/: Cargo.toml
plugins/play-voice/src/: lib.rs
plugins/play-voice/src/model/: mod.rs
plugins/qixi-gacha/: Cargo.toml
plugins/qixi-gacha/src/: lib.rs
plugins/rand-voice/: Cargo.toml
plugins/rand-voice/src/: lib.rs
plugins/user-region/: Cargo.toml
plugins/user-region/src/: lib.rs
pyutils/: helpers.py  scatter_plot.py  scnapshot_html.py
shared-client/: Cargo.toml
src/: main.rs
userdb/: Cargo.toml
userdb/src/: lib.rs
voices/: clean_files.py  pcm2silk.py  remove-silent.py  silk-std2tencent.py  wav2ogg.py  wav2pcm.py
