[package]
name = "maimaibot"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
spdlog-rs.workspace = true
nyquest-preset.workspace = true

kovi-plugin-cmd = "0.3.0"

snafu = { workspace = true }

ping = { version = "0.1.0", path = "plugins/ping" }
bind_user = { version = "0.1.0", path = "plugins/bind_user" }
phigros-tips = { version = "0.1.0", path = "plugins/phigros-tips" }
user-region = { version = "0.1.0", path = "plugins/user-region" }
help-commands = { version = "0.1.0", path = "plugins/help-commands" }
play-voice = { version = "0.1.0", path = "plugins/play-voice" }
import-records = { version = "0.1.0", path = "plugins/import-records" }
pcrt-plot = { version = "0.1.0", path = "plugins/pcrt-plot" }

[workspace]
members = [
    "libs/common-utils",
    "libs/userdb",
    "libs/shared-client",
    "plugins/bind_user",
    "plugins/phigros-tips",
    "plugins/ping",
    "plugins/user-region",
    "plugins/help-commands",
    "plugins/play-voice",
    "plugins/import-records",
    "plugins/pcrt-plot",
]

[workspace.dependencies]
tokio = { version = "1", features = ["sync"] }

nyquest-preset = { version = "0.3.0", features = ["async"] }
sdgb-api = { git = "https://github.com/mokurin000/sdgb-utils-rs.git", version = "0.1.0", default-features = false, features = [
    "tokio",
] }
serde = "1"
serde_json = "1"

fastrand = "2.3.0"
snafu = "0.8.6"
spdlog-rs = { version = "0.4.3", default-features = false, features = [
    "level-debug",
    "release-level-info",
] }

kovi = "0.12.4"

userdb = { path = "libs/userdb" }
shared-client = { path = "libs/shared-client" }
common-utils = { path = "libs/common-utils" }

[profile.release]
lto = "thin"
strip = true
incremental = true
codegen-units = 4
