[package]
name = "maimaibot"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
spdlog-rs = { workspace = true, features = ["log"] }
nyquest-preset.workspace = true

snafu = { workspace = true }

ping = { version = "0.1.0", path = "plugins/ping" }
bind_user = { version = "0.1.0", path = "plugins/bind_user" }
phigros-tips = { version = "0.1.0", path = "plugins/phigros-tips" }
help-commands = { version = "0.1.0", path = "plugins/help-commands" }
play-voice = { version = "0.1.0", path = "plugins/play-voice" }
import-records = { version = "0.1.0", path = "plugins/import-records" }
pcrt-plot = { version = "0.1.0", path = "plugins/pcrt-plot" }

userdb = { workspace = true }
argh = "0.1.13"
toml = "0.9.5"

[workspace]
members = [
    "libs/common-utils",
    "libs/userdb",
    "libs/shared-client",
    "plugins/bind_user",
    "plugins/phigros-tips",
    "plugins/ping",
    "plugins/help-commands",
    "plugins/play-voice",
    "plugins/import-records",
    "plugins/pcrt-plot",
    ".",
]
default-members = ["."]

[workspace.dependencies]
tokio = { version = "1", features = ["sync"] }

nyquest-preset = { version = "0.4.0", features = ["async"] }
sdgb-api = { git = "https://git.fragrance.moe/mokurin000/sdgb-utils-rs", default-features = false, features = [
    "tokio",
] }
music-db = { git = "https://git.fragrance.moe/mokurin000/sdgb-utils-rs" }

serde = "1"
serde_json = "1"

fastrand = "2.3.0"
snafu = "0.8.7"
spdlog-rs = { version = "0.5.2", default-features = false, features = [
    "level-debug",
    "release-level-info",
] }

kovi = { git = "https://github.com/ThriceCola/Kovi", branch = "nightly" }


userdb = { path = "libs/userdb" }
shared-client = { path = "libs/shared-client" }
common-utils = { path = "libs/common-utils" }

[profile.release]
lto = "thin"
strip = true
incremental = false
codegen-units = 1

[patch.crates-io]
crabtime = { git = "https://github.com/wdanilo/crabtime.git", rev = "2ed856f5" }
