[package]
name = "pcrt-plot"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
sdgb-api.workspace = true
spdlog-rs.workspace = true
snafu.workspace = true

userdb.workspace = true
shared-client.workspace = true
common-utils.workspace = true
music-db.workspace = true
glam = "0.30.5"
plotters = "0.3.7"
